- add another layout to the sub-page

--- a/packages/vt12/Resources/Private/Layouts/Default.html
+++ b/packages/vt12/Resources/Private/Layouts/Default.html
@@ -31,7 +31,7 @@
 		</div>
 	</nav>
 	<!-- Header-->
-	<f:render section="Header"/>
+	<f:render section="Header" optional="true"/>
 	<f:render section="Main"/>
 
 	<!-- Features section-->
