--- a/packages/vt12/Resources/Private/Templates/Default.html
+++ b/packages/vt12/Resources/Private/Templates/Default.html
@@ -6,6 +6,8 @@
     <header class="bg-dark py-5">
         <div class="container px-5">
             <div class="row gx-5 align-items-center justify-content-center">
+                {content1 -> f:format.raw()}
+
                 <div class="col-lg-8 col-xl-7 col-xxl-6">
                     <div class="my-5 text-center text-xl-start">
                         <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern
