- working on footer section

--- a/packages/vt12/Resources/Private/Layouts/Default.html
+++ b/packages/vt12/Resources/Private/Layouts/Default.html
@@ -3,10 +3,13 @@
 	<!-- Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container px-5">
-			<a class="navbar-brand" href="index.html">Start Bootstrap</a>
+			<f:link.typolink class="navbar-brand" parameter="{settings.rootUid}}" >
+				<f:image src="{settings.logoFile}" width="50" height="50" alt="{settings.logoAlt}" title="{settings.logoTitle}"/>
+			</f:link.typolink>
 			<f:render partial="mainMenu" arguments="{_all}"/>
 		</div>
 	</nav>
+
 	<!-- Header-->
 	<f:render section="Header" optional="true"/>
 	<f:render section="Main"/>
@@ -19,18 +22,5 @@
 
 </main>
 
-<footer class="bg-dark py-4 mt-auto">
-	<div class="container px-5">
-		<div class="row align-items-center justify-content-between flex-column flex-sm-row">
-			<div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
-			<div class="col-auto">
-				<a class="link-light small" href="#!">Privacy</a>
-				<span class="text-white mx-1">&middot;</span>
-				<a class="link-light small" href="#!">Terms</a>
-				<span class="text-white mx-1">&middot;</span>
-				<a class="link-light small" href="#!">Contact</a>
-			</div>
-		</div>
-	</div>
-</footer>
+<f:render partial="Footer" arguments="{_all}"/>
 </html>
