--- a/packages/vt12/Resources/Private/Partials/MainMenu.html
+++ b/packages/vt12/Resources/Private/Partials/MainMenu.html
@@ -10,11 +10,11 @@
             <f:if condition="{item.children}">
                 <f:then>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown{item.title}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{item.title}</a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown{item.data.uid}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{item.title}</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog{item.data.uid}">
                             <f:for each="{item.children}" as="child">
                                 <li class="nav-item">
-                                    <f:link.typolink  class="dropdown-item" parameter="{child.data.uid}" target="{child.target}" title="{child.title}">{child.title}</f:link.typolink>
+                                    <f:link.typolink  class="dropdown-item {f:if(condition: child.current, then: 'nav-current')}" parameter="{child.data.uid}" target="{child.target}" title="{child.title}">{child.title}</f:link.typolink>
                                 </li>
                             </f:for>
                         </ul>
@@ -22,7 +22,7 @@
                 </f:then>
                 <f:else>
                     <li class="nav-item">
-                        <f:link.typolink class="nav-link" parameter="{item.data.uid}" target="{item.target}" title="{item.title}">{item.title}</f:link.typolink>
+                        <f:link.typolink class="nav-link {f:if(condition: item.current, then: 'nav-current')}" parameter="{item.data.uid}" target="{item.target}" title="{item.title}">{item.title}</f:link.typolink>
                     </li>
                 </f:else>
             </f:if>
